Angular version updated to v14

--- a/angular.json
+++ b/angular.json
@@ -109,5 +109,8 @@
       }
     }
   },
-  "defaultProject": "movie-library"
+  "defaultProject": "movie-library",
+  "cli": {
+    "analytics": false
+  }
 }
